[package]
name = "ucc"
version = "0.1.0"
edition = "2018"
authors = ["Scott J Maddox"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fxhash = "0.2"
lasso = "0.6.0"
lalrpop-util = "0.19"
regex = "1"

[build-dependencies]
lalrpop = "0.19"
