[package]
name = "ucci-web"
version = "0.1.0"
edition = "2018"
authors = ["Scott J Maddox"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ucc = { path = "../ucc" }
wasm-bindgen = "0.2.78"
js-sys = "0.3.55"
